refactor: NifValidationService to return boolean and simplify NIF validation logic